@@ -1,3 +1,7 @@
+- use a simple function to return simple string list from header 
+  (fixes getting >4096 long rpm changelogs)
+  (!! static buffer size limitation in callback_list_str_xpush() should be fixed !!)
+
 Version 2.08 - 24 October 2007, by Pascal "Pixel" Rigaux
 
 - fix build on rpm 4.4.2.2
